fix modeling stretch

--- a/src/sass/components/3D-modeling/_methods.scss
+++ b/src/sass/components/3D-modeling/_methods.scss
@@ -1,59 +1,63 @@
 .modeling-method {
-     padding-top: 40px;
-     padding-bottom: 60px;
+  padding-top: 40px;
+  padding-bottom: 60px;
 
-     @include mq($width-desktop) { 
-     padding-top: 100px;
-     padding-bottom: 80px;
-     }
+  @include mq($width-desktop) {
+    padding-top: 100px;
+    padding-bottom: 80px;
+  }
 }
 .modeling-method__title {
-     margin-bottom: 16px;
+  margin-bottom: 16px;
 
-     font-size: 18px;
-     font-weight: 700;
-     line-height: 1.25;
-     text-transform: uppercase;
-     color: getColor('title-text');
-     
-     @include mq($width-tablet) {
-     font-size: 24px;
-     max-width: 584px;
-     margin-bottom: 24px;
-     }
-     
-     @include mq($width-desktop) { 
-     max-width: 900px;
-     padding: 0 117px;
-     margin-bottom: 40px;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.25;
+  text-transform: uppercase;
+  color: getColor('title-text');
 
-     font-size: 36px;
-     }
+  @include mq($width-tablet) {
+    font-size: 24px;
+    max-width: 584px;
+    margin-bottom: 24px;
+  }
+
+  @include mq($width-desktop) {
+    max-width: 900px;
+    padding: 0 117px;
+    margin-bottom: 40px;
+
+    font-size: 36px;
+  }
 }
 
 .modeling-method__list {
-     list-style: none;
-     display: flex;
-     flex-wrap: wrap;
-     column-gap: 20px;
-     row-gap: 16px;
-     margin-bottom: 40px;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  column-gap: 20px;
+  row-gap: 16px;
+  margin-bottom: 40px;
+  margin-left: auto;
+  margin-right: auto;
 
-          @include mq($width-tablet) {
-          margin-bottom: 60px;
-          column-gap: 32px;
-          row-gap: 16px;
-          }
+  @include mq($width-tablet) {
+    margin-bottom: 60px;
+    column-gap: 32px;
+    row-gap: 16px;
+  }
 
-          @include mq($width-desktop) {
-          margin-bottom: 80px;}
-     }
-     
+  @include mq($width-desktop) {
+    margin-bottom: 80px;
+  }
+}
+
 .modeling-method__item {
-     width: calc((100% - 20px) / 2);
+  width: min(152px, calc((100% + 20px) / 2 - 20px));
 
-     @include mq($width-tablet) {
-          width: calc((100% - 32px * 3) / 4);
-          
-     }     
+  @include mq($width-tablet) {
+    width: calc((100% - 32px * 3) / 4);
+  }
 }
